--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "decompositiontree",
-  "version": "0.0.0",
-  "private": true,
+  "name": "decomposition-tree",
+  "version": "0.0.1",
+  "private": false,
+  "description": "vue3分解树展示",
   "type": "module",
+  "main": "lib/index.umd.js",
+  "module": "lib/index.js",
+  "style": "lib/style.css",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -13,14 +21,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "element-plus": "^2.7.6",
     "filter-obj": "^6.1.0",
     "leader-line-vue": "^2.1.1",
-    "normalize.css": "^8.0.1",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue": "^3.4.29"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -31,6 +34,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "element-plus": "^2.7.6",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
@@ -40,5 +44,17 @@
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vue-tsc": "^2.0.21"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "keywords": [
+    "vue3-decomposition-tree",
+    "decomposition-tree",
+    "vue3"
+  ],
+  "author": "Zhu Yanjun",
+  "license": "MIT",
+  "homepage": "http://www.zhuyanjun.cn",
+  "repository": "https://github.com/xiaopig123456/decomposition-tree"
 }
