--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "decomposition-tree",
   "version": "0.0.1",
   "private": false,
-  "description": "vue3分解树展示",
+  "description": "一个vue3分解树展示插件。",
   "type": "module",
   "main": "lib/index.umd.js",
   "module": "lib/index.js",
@@ -26,11 +26,11 @@
     "vue": "^3.4.29"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.53.3",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
-    "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
@@ -42,7 +42,7 @@
     "sass": "^1.77.6",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
-    "vite-plugin-vue-devtools": "^7.3.1",
+    "vite-plugin-dts": "^4.5.4",
     "vue-tsc": "^2.0.21"
   },
   "directories": {
