修复`package.json`中main入口文件错误。

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "decomposition-tree",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": false,
   "description": "一个vue3分解树展示组件。",
   "type": "module",
-  "main": "lib/index.umd.js",
+  "main": "lib/index.umd.cjs",
   "module": "lib/index.js",
   "style": "lib/style.css",
   "types": "lib/index.d.ts",
